<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.app"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.example.android.sunshine.app.LocationEditTextPreference
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default_val"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength = "3"/>

    <ListPreference
        android:title="@string/pref_units_title"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/temp_units_entries"
        android:entryValues="@array/temp_units_values"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>